--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -6,15 +6,10 @@
 #  signin_name     :string
 #  display_name    :string
 #  password_digest :string
-#  status          :string           default("available")
+#  status          :string
 #  created_at      :datetime         not null
 #  updated_at      :datetime         not null
 #
-
-validates :signin_name, presence: true, uniqueness: true, length: { in: 4..12 }
-validates :display_name, presence: true
-validates :status, inclusion: { in: %w[available suspended]}
-has_secure_password
 
 one:
   signin_name: MyString
